# mmtwfs

./: .dockerignore  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CITATION.cff  Dockerfile  LICENSE.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  azure-template.yml  bcv dev.ipynb  config.py  environment.yml  indi_dev.ipynb  indiclient.py  poppy dev.ipynb  pyproject.toml  sbigindi.py  setup.cfg  setup.py  tox.ini  zernike testing.ipynb  zernike.py
.github/workflows/: docker.yml  mmtwfs-tests.yml  publish-to-pypi.yml
docs/: conf.py  index.rst  license.rst
docs/mmtwfs/: api_docs.rst  bino_sh_data.fits  binospec.rst  f9.rst  hecto.rst  index.rst  mmirs.rst  tips_tricks_caveats.rst  usage.rst
mmtwfs/: __init__.py  config.py  conftest.py  custom_exceptions.py  f9topbox.py  indiclient.py  mmtcell.py  photometry.py  sbigindi.py  secondary.py  telescope.py  utils.py  wfs.py  zernike.py  zernike_vector.py
mmtwfs/data/: f5zernfield.tab  f5zernfield_flatsurface.tab  f5zernfield_std_curvedsurface.TXT  f5zernfield_std_flatsurface.TXT  mmirszernfield.tab  null.TXT  null_forces
mmtwfs/data/ref_images/: LED2sec_22.fits  bino_mask.fits  binospec_ref.fits  f5_hecto_ref.fits  f5_mask.fits  f9_ref.fits  f9_sbig_ref.fits  flwo15_mask.fits  flwo_mask.fits  mmirs_camera1_ref.fits  mmirs_mask.fits  newf9_mask.fits  oldf9_mask.fits
mmtwfs/data/test_data/: 1195.star.p2m18.fits  AST45_p1000.frc  TREX_p500_0000.fits  auto_wfs_0037_ave.fits  bino_wfs_0600.fits  f9wfs_20200225-205600.fits  mmirs_blank.fits  mmirs_bogus.fits  mmirs_wfs_0150.fits  mmirs_wfs_rename_0566.fits  test_newf9.fits  wfs_ff_cal_img_2017.1113.111402.fits
mmtwfs/scripts/: cwfs.py  fix_csvs.py  fix_mmirs_exposure_time.py  reanalyze.py  rename_mmirs_files.py
mmtwfs/tests/: coveragerc  test_secondaries.py  test_telescope.py  test_wfs.py  test_zernike.py
notebooks/: 61" Curvature Wavefront Sensing.ipynb  Background and spot detection.ipynb  Bino Engineering.ipynb  Curvature Wavefront Sensing.ipynb  F9 reposition WFS image.ipynb  FLWO WFS.ipynb  MMIRS CWFS.ipynb  Modal Dither.ipynb  New F9 Testing.ipynb  PupilVignette-MMIRSWFS.ipynb  Seeing Summary.ipynb  Skycam pixel mask.ipynb  WFS testing.ipynb  astropy_example.ipynb  baseline tests.ipynb  bcv dev.ipynb  benchmark.ipynb  bino seeing 2018-11-02.ipynb  bino_guider_seeing.ipynb  dome seeing.ipynb  f9_bad_pixel.fits  f9wfs pixel mask.ipynb  fix mmirs exposure time.ipynb  force_testing.ipynb  hecto recenter.ipynb  indi_dev.ipynb  model stability.ipynb  poppy dev.ipynb  reanalyze.ipynb  reanalyze_win10.ipynb  scipy_debug.ipynb  slope debug.ipynb  spot_analysis.ipynb  spot_fitting.ipynb  wavefront_fitting.ipynb  wfs match.ipynb  zernike testing.ipynb  zgrad.py
ref_images/: mmirs_camera1_ref.fits  mmirs_camera2_ref.fits
scripts/: cwfs  fix_csvs.py  fix_mmirs_exposure_time.py  rename_mmirs_files.py
wfssrv/: wfssrv.py
wfssrv/static/js/: mpl.js
wfssrv/templates/: home.html  wfs.html
