[metadata]
name = mmtwfs
description = Wavefront sensing and active optics management tools for the MMT Observatory
author = T. E. Pickering (MMT Observatory)
author_email = tim@mmto.org
license = BSD-3
url = https://github.com/MMTObservatory/mmtwfs
edit_on_github = True
github_project = MMTObservatory/mmtwfs

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 1.0.dev

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
python_requires = >=3.7
install_requires = matplotlib; scipy; astropy; photutils; scikit-image; dnspython; poppy; lmfit; ccdproc; astroscrappy
zip_safe = False
use_2to3 = False

[options.extras_require]
docs =
    sphinx-astropy
    pytest
test =
    pytest
    pytest-astropy
    nose
    coverage
    codecov
all =
    matplotlib
    scipy
    astropy
    photutils
    scikit-image
    jupyter
    dnspython
    poppy
    lmfit
    ccdproc
    astroscrappy

[options.entry_points]
console_scripts =
    cwfs = mmtwfs.scripts.cwfs:main
    fix_mmtwfs_csvs = mmtwfs.scripts.fix_csvs:main
    fix_mmirs_exposure_time = mmtwfs.scripts.fix_mmirs_exposure_time:main
    rename_mmirs_files = mmtwfs.scripts.rename_mmirs_files:main

[options.package_data]
mmtwfs = data/*; data/ref_images/*; data/test_data/*
mmtwfs.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py,_astropy_init.py,version.py
