[metadata]
name = mmtwfs
description = Wavefront sensing and active optics management tools for the MMT Observatory
long_description = file: README.md
author = T. E. Pickering (MMT Observatory)
author_email = tim@mmto.org
license = BSD-3
url = https://github.com/MMTObservatory/mmtwfs
edit_on_github = True
github_project = MMTObservatory/mmtwfs

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = astropy
include_package_data = True

[options.extras_require]
docs =
    sphinx-astropy
test =
    tox
    pytest-astropy
    nose
    coverage
    codecov
all =
    matplotlib
    scipy
    astropy
    photutils
    scikit-image
    dnspython
    poppy
    lmfit
    ccdproc
    astroscrappy
extra =
    jupyter

[options.entry_points]
console_scripts =
    cwfs = mmtwfs.scripts.cwfs:main
    fix_mmtwfs_csvs = mmtwfs.scripts.fix_csvs:main
    fix_mmirs_exposure_time = mmtwfs.scripts.fix_mmirs_exposure_time:main
    rename_mmirs_files = mmtwfs.scripts.rename_mmirs_files:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = "mmtwfs" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    mmtwfs/_astropy_init*
    mmtwfs/conftest.py
    mmtwfs/*setup_package*
    mmtwfs/tests/*
    mmtwfs/*/tests/*
    mmtwfs/extern/*
    mmtwfs/version*
    */mmtwfs/_astropy_init*
    */mmtwfs/conftest.py
    */mmtwfs/*setup_package*
    */mmtwfs/tests/*
    */mmtwfs/*/tests/*
    */mmtwfs/extern/*
    */mmtwfs/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
